--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 autopep8==1.5
 bcrypt==3.1.7
 bidict==0.19.0
+certifi==2019.11.28
 cffi==1.13.2
+chardet==3.0.4
 Click==7.0
+coloredlogs==10.0
 cryptography==2.8
 Flask==1.1.1
+humanfriendly==4.18
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
@@ -13,5 +18,7 @@ pycodestyle==2.5.0
 pycparser==2.19
 PyNaCl==1.3.0
 PyYAML==5.3
+requests==2.22.0
 six==1.13.0
+urllib3==1.25.7
 Werkzeug==0.16.0
