--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "gavea"
+name = "moto"
 version = "0.1.0"
 readme = "README.md"
 description = "A status page for your infrastructure"
 authors = ["Ricardo Gomes <desk467@gmail.com>"]
-repository = "https://github.com/desk467/gavea"
+repository = "https://github.com/desk467/moto"
 keywords = ["devops", "infrastructure", "testing", "status page"]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -13,7 +13,7 @@ classifiers = [
 ]
 
 packages = [
-    { include = "gavea" },
+    { include = "moto" },
 ]
 
 [tool.poetry.dependencies]
@@ -29,7 +29,7 @@ autopep8 = "^1.5.3"
 rope = "^0.17.0"
 
 [tool.poetry.scripts]
-gavea = "gavea.cli:main"
+moto = "moto.cli:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
